--- a/src/MoneyManager.Web/_Imports.razor
+++ b/src/MoneyManager.Web/_Imports.razor
@@ -9,3 +9,5 @@
 @using MoneyManager.Web
 @using MoneyManager.Web.Shared
 @using MoneyManager.Web.Pages
+@using MoneyManager.Web.Components
+@using MoneyManager.Web.Components.Investment
